# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.175 2011/09/20 19:27:07 tove Exp $

*DateTime-TimeZone-1.380.0 (20 Sep 2011)

  20 Sep 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.380.0.ebuild:
  Version bump

*DateTime-TimeZone-1.370.0 (13 Sep 2011)

  13 Sep 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.370.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-1.350.0.ebuild:
  Cleanup

*DateTime-TimeZone-1.360.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.360.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -DateTime-TimeZone-1.23.ebuild,
  -DateTime-TimeZone-1.310.0.ebuild, -DateTime-TimeZone-1.320.0.ebuild,
  -DateTime-TimeZone-1.330.0.ebuild, -DateTime-TimeZone-1.340.0.ebuild:
  Cleanup

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  DateTime-TimeZone-1.350.0.ebuild:
  keyword ~x86-fbsd, bug #346449

*DateTime-TimeZone-1.350.0 (06 Jul 2011)

  06 Jul 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.350.0.ebuild:
  Version bump

  29 May 2011; Fabian Groffen <grobian@gentoo.org>
  DateTime-TimeZone-1.340.0.ebuild:
  Marked ~x64-macos, bug #368545

*DateTime-TimeZone-1.340.0 (26 Apr 2011)

  26 Apr 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.340.0.ebuild:
  Version bump

*DateTime-TimeZone-1.330.0 (12 Apr 2011)

  12 Apr 2011; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-1.330.0.ebuild:
  Version bump

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -DateTime-TimeZone-1.26.ebuild,
  -DateTime-TimeZone-1.270.ebuild, -DateTime-TimeZone-1.280.ebuild,
  -DateTime-TimeZone-1.290.0.ebuild, -DateTime-TimeZone-1.300.0.ebuild:
  Cleanup

*DateTime-TimeZone-1.320.0 (02 Apr 2011)

  02 Apr 2011; Torsten Veller <tove@gentoo.org>