@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.175 2011/09/20 19:27:07 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.176 2011/09/27 15:55:21 tove Exp $
+
+*DateTime-TimeZone-1.390.0 (27 Sep 2011)
+
+  27 Sep 2011; Torsten Veller <tove@gentoo.org>
+  +DateTime-TimeZone-1.390.0.ebuild:
+  Version bump
 
 *DateTime-TimeZone-1.380.0 (20 Sep 2011)
 
